// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolBar Snapshot Changes class when activated 1`] = `
<span
  className=""
  onClick={[Function]}
  title="Move Tool"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"
    />
  </svg>
</span>
`;

exports[`ToolBar Snapshot Should match Snapshot 1`] = `
<span
  className="active"
  onClick={[Function]}
  title="Move Tool"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"
    />
  </svg>
</span>
`;
